<resources>
    <string name="app_name">GrabadoraDeLlamadas</string>
    <string name="logMA">MAIN_ACTIVITY</string>
    <string name="logLA">LLAMADA_ACTIVITY</string>
    <string name="title_activity_opciones">Opciones</string>


    <string name="ok">Ok</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="cancel">Cancelar</string>

    <!-- Strings related to Settings -->

    <string name="pref_habilitado_title">Habilitar grabación de llamadas</string>
    <string name="pref_entrantes_title">Llamadas entrantes</string>
    <string name="pref_salientes_title">Llamadas salientes</string>

    <string name="pref_configurar_title">Configurar números</string>
    <string name="pref_configurar_summary">Contactos para los que se graban las llamadas.</string>
    <string name="pref_configurar_dialog_title">Añadir nuevo número</string>
    <string name="pref_configurar_dialog_message">¿Añadir desde contactos?</string>

    <string name="pref_excluir_title">Excluir números</string>
    <string name="pref_excluir_summary">Contactos de los cuales nunca se grabarán las llamadas.</string>
    <string name="excluir_dialog_title">Excluir nuevo número</string>
    <string name="excluir_dialog_message">¿Añadir desde contactos?</string>

    <string name="pref_llamadas_a_grabar_title">Llamadas a grabar</string>
    <string-array name="pref_llamadas_a_grabar_entries">
        <item>Todas</item>
        <item>Sólo de los numeros configurados</item>
    </string-array>
    <string-array name="pref_llamadas_a_grabar_values">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_audio_a_grabar_title">Audio a grabar</string>
    <string-array name="pref_audio_a_grabar_entries">
        <item>Altavoz y micrófono</item>
        <item>Sólo altavoz</item>
        <item>Sólo micrófono</item>
    </string-array>
    <string-array name="pref_audio_a_grabar_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_configurar">ConfigurarActivity</string>
    <string name="title_activity_excluir">ExcluirActivity</string>

    <!-- wasabi warrior-->

</resources>
